--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -37,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0"
   }
 }
