--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.2.0"
   }
 }
